Test GitHub Actions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,13 +8,13 @@
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
-        <title>Astro</title>
+        <title>iFarbod</title>
     </head>
     <body>
-        <h1 class="text-3xl font-bold underline">Astro</h1>
+        <h1 class="text-3xl font-bold underline">iFarbod</h1>
         <ul>
             <li>one</li>
-            <li class="bg-violet-700 px-4 py-2 text-white hover:bg-violet-800 sm:px-8 sm:py-3">two</li>
+            <li>two</li>
         </ul>
     </body>
 </html>
